# md.rs

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: Cargo.toml
examples/data/: ex1.md
examples/src/: reader.rs
mdrender/: Cargo.toml
src/: lib.rs  macros.rs  result.rs  tokens.rs  util.rs
src/md/: lib.rs  result.rs  tokens.rs
src/parser/: config.rs  mod.rs  result.rs
src/parser/block/: atx_heading.rs  block_code.rs  block_quote.rs  lists.rs  misc.rs  mod.rs
src/parser/inline/: emphasis.rs  escape.rs  link.rs  mod.rs
